--- a/style.css
+++ b/style.css
@@ -48,6 +48,7 @@ p, a, span {
 }
 
 #main-container {
+  position: relative;
     height: auto;
     width: 50%;
     display: flex;
@@ -59,6 +60,42 @@ p, a, span {
     border-radius: 10px;
     overflow: hidden;
 }
+
+.bg-video {
+  position: absolute;
+  top: -170px;
+  left: -135px;
+  bottom: 50%;
+  opacity: 0.2;
+  height: 600px;
+  width: 170%;
+  transform: rotate(-20deg);
+  
+}
+
+.bg-video video {
+   height: 100%;
+   width: 100%;
+   object-fit: cover;
+}
+
+/* .bg-image {
+  position: absolute;
+  bottom: -150px;
+  top: 50%;
+  opacity: .2;
+  height: 500px;
+  width: 150%;
+  transform: rotate(-20deg);
+
+} */
+
+/* .bg-image img {
+  height: 100%;
+  width: 100%;
+  object-fit: cover;
+} */
+
 .profile {
   display: flex;
   justify-content: center;
@@ -350,6 +387,14 @@ p, a, span {
         width: 100%;
         height: auto;
         padding: 1rem 0 .5rem 0;
+    }
+
+    .bg-video {
+      top: -90px;
+    }
+
+    .bg-image {
+      bottom: -100px;
     }
 
     .profile-discription {
